# OpenBallBot-RL

./: Readme.md  Todo.md  mujoco_fix.patch  requirements.txt
assets/: bbot.xml  body_info.py
assets/stl_files/: cone.stl  cylinder_0.stl  cylinder_1.stl  cylinder_2.stl  sphere.stl  sphere_2.stl  sphere_20cm.stl
ballbotgym/: pyproject.toml
ballbotgym/ballbotgym/: Rewards.py  __init__.py  bbot_env.py  terrain.py
ballbotgym/ballbotgym/assets/: bbot.xml  bbot_bands.xml  bbot_with_terrain_template.xml  terrain_test.xml
ballbotgym/ballbotgym/assets/stl_files/: omniwheel_0.stl  omniwheel_1.stl  sphere_small.stl  tower.stl
ballbotgym/test/: test.py
config/: train_SAC_directional.yaml  train_ppo_directional.yaml  train_ppo_directional_goal.yaml  train_ppo_fixed_goal.yaml
encoder_frozen/: encoder_epoch_29_pnoise  encoder_epoch_38_pnoise_and_snoise  encoder_epoch_45_new_cams  encoder_epoch_53
env/: bbot.py  make_stones.py  policies.py  test_ppo.py
env/assets/: __init__.py
env/assets/stl_files/: omniwheel_2.stl
policies/: __init__.py  policies.py
scripts/: bbot.py  gather_data.py  plot_G.py  pretrain_cnn.py  test.py  test_pid.py  test_ppo.py  train.py
src/: bbot.py  policies.py  tune_pid.py  utils.py
utils/: plotting_tools.py  utils.py
